Fix some layout issues

--- a/client/css/index.css
+++ b/client/css/index.css
@@ -36,14 +36,16 @@ body
 }
 
 .editor, .results {
-  display: flex;
+  position: relative;
   flex-basis: 50%;
-  flex-grow: 1;
 }
 
 #code {
-  flex-basis: 100vh;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .separator {
